<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Phoenix Lite</string>
    <string name="dialogs">Conversations</string>
    <string name="dialog_day_today">Today</string>
    <string name="dialog_day_yesterday">Yesterday</string>
    <string name="dialog_day_ten_days">In 10 days</string>
    <string name="dialog_day_older">Older</string>
    <string name="dialog_me">Me</string>
    <string name="attachments">[attachments]</string>
    <string name="forward_messages">[messages]</string>
    <string name="service_message">[service message]</string>
    <string name="title_mssages">Messages</string>
    <string name="back_button_label" translatable="false">Back</string>
    <string name="next_button_label" translatable="false">Next</string>
    <string name="skip_button_label" translatable="false">Skip</string>
    <string name="settings">Settings</string>
    <string-array name="array_theme_names" translatable="false">
        <item>Blue</item>
        <item>Light Blue</item>
        <item>Blue Grey</item>
        <item>Teal</item>
        <item>Red</item>
        <item>Indigo</item>
        <item>Pink</item>
        <item>Deep Orange</item>
        <item>Purple</item>
        <item>Monochrome</item>
        <item>Green</item>
        <item>Pixel-Styled</item>
    </string-array>
    <string-array name="player_progress_state" translatable="false">
        <item> ••••••</item>
        <item>• •••••</item>
        <item>•• ••••</item>
        <item>••• •••</item>
        <item>•••• ••</item>
        <item>••••• •</item>
        <item>•••••• </item>
    </string-array>
    <string-array name="array_theme_values" translatable="false">
        <item>theme1</item>
        <item>theme2</item>
        <item>theme3</item>
        <item>theme4</item>
        <item>theme5</item>
        <item>theme6</item>
        <item>theme7</item>
        <item>theme8</item>
        <item>theme9</item>
        <item>theme10</item>
        <item>theme11</item>
        <item>theme12</item>
    </string-array>
    <string-array name="night_mode_names">
        <item>Off</item>
        <item>On</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="night_mode_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>0</item>
    </string-array>
    <string-array name="array_vibration_length_names">
        <item>Short</item>
        <item>Normal</item>
        <item>Long</item>
        <item>Short(twice)</item>
        <item>Normal(twice)</item>
        <item>Long(twice)</item>
    </string-array>
    <string-array name="array_vibration_length_value" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="array_chat_background_names" translatable="false">
        <item>Static</item>
        <item>Cookies</item>
        <item>Lines</item>
    </string-array>
    <string-array name="array_chat_background_items" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="general_settings">General</string>
    <string name="other_settings">Other</string>
    <string name="about_settings">About</string>
    <string name="choose_theme_title">Themes</string>
    <string name="share_text">Share app with friends</string>
    <string name="rate_text">Rate this app in Google Play</string>
    <string name="go_to_dialog">To conversation</string>
    <string name="send">Send</string>
    <string name="sending">Sending</string>
    <string name="text_hint">Type text</string>
    <string name="in_order">In order</string>
    <string name="error">Error</string>
    <string name="friends">Friends</string>
    <string name="sending_message_failed">Sending message failed</string>
    <string name="try_again">Repeat</string>
    <string name="delete">Delete</string>
    <string name="select_attachments">Select attachments</string>
    <string name="attachment_wall_post">Post</string>
    <string name="attachment_document">Document</string>
    <string name="attachment_documents">Documents</string>
    <string name="attachment_link">Link</string>
    <string name="new_message">New message</string>
    <string name="user_type_message">is typing a message…</string>
    <string name="load_more">Load more</string>
    <string name="last_seen_sex_man">last activity: %1$s</string>
    <string name="last_seen_sex_woman">last activity: %1$s</string>
    <string name="last_seen_sex_unknown">last activity: %1$s</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="thank_you">Info about this app was shared to your wall. Thank you very much! </string>
    <string name="notif_setting_title">Notifications</string>
    <string name="messages_in_dialogs_tite">Messages in dialogues</string>
    <string name="enable_dialogs_notif_title">Enable</string>
    <string name="enable_dialogs_sound_title">Sound</string>
    <string name="enable_dialogs_vibro_title">Vibration</string>
    <string name="enable_dialogs_led_title">LED</string>
    <string name="messages_in_groupchat_tite">Messages in group conversations</string>
    <string name="enable_groupchat_notif_title">Enable</string>
    <string name="enable_groupchat_sound_title">Sound</string>
    <string name="enable_groupchat_vibro_title">Vibration</string>
    <string name="enable_groupchat_led_title">LED</string>
    <string name="enter_dir_name">Enter new directory name</string>
    <string name="cannot_create_catalog">Directory already exists or you have entered an invalid directory name</string>
    <string name="default_category_title">Start page</string>
    <string name="default_category_summary">Choose page that will be loaded on app start</string>
    <string name="group_chat_leave">Leave chat</string>
    <string name="refresh">Refresh</string>
    <string name="pref_join_app_group_title">Visit application community</string>
    <string name="pref_join_app_group_summary">In Phoenix for VK community you can watch development process, give your remarks or ideas</string>
    <string name="night_mode_title">Night mode</string>
    <string name="select_image_size_title">Upload image size</string>
    <string name="select_image_size_summary">Select upload image size (Middle is recommended)</string>
    <string name="high_notif_priority_title">High notification priority</string>
    <string name="high_notif_priority_summary">Application notifications will be higher than another notifications. For Android 5.0 and higher this option also toggles heads-up notifications</string>
    <string name="emojis_type_title">Use system emoticons</string>
    <string name="emojis_type_summary">System emoticons will be used if checked</string>
    <string name="appearance_settings">Appearance</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="restore">Restore</string>
    <string name="drawer_categories_title">Navigation drawer items</string>
    <string name="drawer_categories_summary">Choose items that will be displayed in navigation drawer</string>
    <string name="select_ringtone_title">Notification ringtone</string>
    <string name="send_on_enter_title">Send by ENTER button</string>
    <string name="send_on_enter_summary">Send a message by pressing the ENTER</string>
    <string name="edit">Edit</string>
    <string name="copy_url">Copy link</string>
    <string name="goto_user">Go to owner</string>
    <string name="change_chat_title">Change chat title</string>
    <string name="chat_users">Chat members</string>
    <string name="avatar_style_title">Avatar style</string>
    <string name="avatar_style_summary">Choose a style of avatar to be used in the application</string>
    <string name="search">Search</string>
    <string name="input">Input</string>
    <string name="attachments_in_chat">Attachments in chat</string>
    <string name="new_comment_notification">Comments to your posts/photos/videos</string>
    <string name="friend_request_accepted_notification">Friend request acceptation</string>
    <string name="new_follower_notification">New followers</string>
    <string name="group_invited_notification">Groups invitation</string>
    <string name="reply_notification">Replies to your comments</string>
    <string name="new_wall_post_notification">New posts on your wall</string>
    <string name="wall_publish_notification">Post was published</string>
    <string name="other_notifications_types">Other notifications types</string>
    <string name="other_notifications_settings">Other notifications settings</string>
    <string name="sidebar_settings">Sidebar settings</string>
    <string name="double_press_to_exit">Double-click to exit the application</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="key_exchange">Key exchange</string>
    <string name="encryption_status">Encryption status</string>
    <string name="quick_reply">Quick reply</string>
    <string name="quick_reply_summary">Immediately display quick reply window</string>
    <string name="security">Security</string>
    <string name="use_pin_for_security_title">Use PIN for security</string>
    <string name="ask_for_pin_on_application_start_title">PIN on start</string>
    <string name="ask_for_pin_on_application_start_summary">Ask for PIN on application start</string>
    <string name="change_pin_title">Change PIN</string>
    <string name="delete_keys">Delete keys</string>
    <string name="clear_storage_of_encryption_keys">Clear storage of encryption keys</string>
    <string name="secured_messages">Secured messages</string>
    <string name="encryption_terms_of_use_title">Terms of use</string>
    <string name="new_posts_of_users_and_communities">New posts of users and communities</string>
    <string name="likes">Likes</string>
    <string name="chat_background">Chat background</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="copy_text">Copy text</string>
    <string name="allow_text_selection">Allow text selection</string>
    <string name="settings_show_logs_title" translatable="false">Logs</string>
    <string name="other">Other</string>
    <string name="hide_notif_message_body_summary">Do not show the body of a message in a notification</string>
    <string name="hide_notif_message_body_title">Hide message body</string>
    <string name="community_options_comments_title">Comments</string>
    <string name="community_options_feedback_title">Feedback</string>
    <string name="community_options_enable_comments">Enable comments</string>
    <string name="community_options_comments_filter_title">Comment filter</string>
    <string name="community_options_enable_profanity_filter">Enable profanity filter</string>
    <string name="community_options_enable_keyword_filter">Enable keyword filter</string>
    <string name="community_options_separate_keywords_by_commas">Separate keywords by commas.</string>
    <string name="request_executor_title">Request executor</string>
    <string name="dev_settings">Developer options</string>
    <string name="user_blacklist_title">Black list</string>
    <string name="http_proxy">HTTP Proxy</string>
    <string name="allow_fingerprint_title">Allow fingerprint</string>
    <string name="source_code_title" translatable="false">Source code</string>
    <string name="source_code_link" translatable="false">https://github.com/PhoenixDevTeam/Phoenix-for-VK</string>
    <string name="birthdays">Birthdays</string>
    <string name="open_links_in_app">Open web pages in app</string>
    <string name="vibration_length">Vibration length</string>
    <string name="settings_force_exoplayer_title" translatable="false">Force ExoPlayer</string>
</resources>