<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="group_general"
        android:title="@string/general_settings"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/night_mode_names"
            android:entryValues="@array/night_mode_values"
            android:key="night_switch"
            android:title="@string/night_mode_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:key="default_category"
            android:summary="@string/default_category_summary"
            android:title="@string/default_category_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/array_image_sizes_settings_names"
            android:entryValues="@array/array_image_sizes_settings_values"
            android:key="image_size"
            android:summary="@string/select_image_size_summary"
            android:title="@string/select_image_size_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="3"
            android:entries="@array/preview_preview_size"
            android:entryValues="@array/preview_preview_size_values"
            android:key="photo_preview_size"
            android:title="@string/photo_preview_size_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="proxy"
            android:title="@string/http_proxy"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="notifications"
            android:title="@string/notif_setting_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="security"
            android:title="@string/security"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="blacklist"
            android:title="@string/user_blacklist_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="custom_tabs"
            android:title="@string/open_links_in_app"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/input"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="emojis_type"
            android:summary="@string/emojis_type_summary"
            android:title="@string/emojis_type_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="send_by_enter"
            android:summary="@string/send_on_enter_summary"
            android:title="@string/send_on_enter_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="group_appearance"
        android:title="@string/appearance_settings"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="fire"
            android:entries="@array/array_theme_names"
            android:entryValues="@array/array_theme_values"
            android:key="app_theme"
            android:title="@string/choose_theme_title"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/array_chat_background_names"
            android:entryValues="@array/array_chat_background_items"
            android:key="chat_background"
            android:title="@string/chat_background"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="avatar_style"
            android:summary="@string/avatar_style_summary"
            android:title="@string/avatar_style_title"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="double_press_to_exit"
            android:title="@string/double_press_to_exit"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/sidebar_settings"
        app:iconSpaceReserved="false">

        <Preference
            android:dialogTitle="@string/drawer_categories_title"
            android:key="drawer_categories"
            android:summary="@string/drawer_categories_summary"
            android:title="@string/drawer_categories_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="other"
        android:title="@string/other_settings"
        app:iconSpaceReserved="false">
        <Preference
            android:key="talk_about"
            android:title="@string/share_text"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="add_comment"
            android:title="@string/rate_text"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dev"
        android:title="@string/dev_settings"
        app:iconSpaceReserved="false">
        <CheckBoxPreference
            android:key="force_exoplayer"
            android:title="@string/settings_force_exoplayer_title"
            app:iconSpaceReserved="false" />
        <CheckBoxPreference
            android:key="keep_longpoll"
            android:summary="@string/settings_keep_longpoll_summary"
            android:title="@string/settings_keep_longpoll_title"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="show_logs"
            android:title="@string/settings_show_logs_title"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="request_executor"
            android:title="@string/request_executor_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_settings"
        app:iconSpaceReserved="false">
        <Preference
            android:key="privacy_policy"
            android:title="@string/privacy_policy"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="join_app_group"
            android:summary="@string/pref_join_app_group_summary"
            android:title="@string/pref_join_app_group_title"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="source_code"
            android:summary="@string/source_code_link"
            android:title="@string/source_code_title"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="version"
            android:title="@string/app_name"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>