<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_settings" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="use_pin_for_security"
        android:title="@string/use_pin_for_security_title" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="use_pin_for_security"
        android:key="use_pin_for_entrance"
        android:summary="@string/ask_for_pin_on_application_start_summary"
        android:title="@string/ask_for_pin_on_application_start_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="use_pin_for_security"
        android:key="allow_fingerprint"
        android:title="@string/allow_fingerprint_title" />

    <Preference
        android:dependency="use_pin_for_security"
        android:key="change_pin"
        android:title="@string/change_pin_title" />

    <PreferenceCategory android:title="@string/secured_messages" />

    <Preference
        android:key="encryption_terms_of_use"
        android:title="@string/encryption_terms_of_use_title"/>

    <Preference
        android:key="delete_all_encryption_keys"
        android:title="@string/delete_keys"
        android:summary="@string/clear_storage_of_encryption_keys"/>

    <!--<Preference
        android:key="export_encryption_keys"
        android:title="@string/export_keys_title"
        android:summary="@string/export_keys_summary"/>

    <Preference
        android:key="import_encryption_keys"
        android:title="@string/import_keys_title"
        android:summary="@string/import_keys_summary"/>-->


    <PreferenceCategory android:title="@string/other" />

    <CheckBoxPreference
        android:key="hide_notif_message_body"
        android:title="@string/hide_notif_message_body_title"
        android:summary="@string/hide_notif_message_body_summary"/>

    <!--<switchpreference
        android:key="auto_message_decrypt"
        android:defaultvalue="true"
        android:title="@string/automatically_decrypt_all_messages_title"
        android:dependency="use_pin_for_security"
        android:visibility="gone"/>

    <switchpreference
        android:key="use_pin_for_decryption"
        android:title="@string/ask_for_pin_when_decrypting_messages_title"
        android:dependency="use_pin_for_security"
        android:visibility="gone"/>-->

</PreferenceScreen>